--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "browser-sync": "^2.24.6",
     "browserify": "^16.2.2",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-notify": "^3.2.0",
     "gulp-sass": "^4.0.1",
