--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "gulp-sass": "^4.0.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
+  },
+  "dependencies": {
+    "yelp-api-v3": "^1.5.0"
   }
 }
